# utils

./: .badgery.yaml  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .prettierignore  CONTRIBUTING.md  LICENSE  README.md  codecov.yml  pixi.toml  prettierrc.toml  pyproject.toml  versions.json
.github/actions/download-artifact/: action.yml
.github/actions/github-script/: action.yml
.github/actions/publish-to-pypi/: action.yml
.github/actions/setup-easyscience-bot/: action.yml
.github/actions/setup-pixi/: action.yml
.github/actions/upload-artifact/: action.yml
.github/actions/upload-codecov/: action.yml
.github/configs/: rulesets-develop.json  rulesets-master.json
.github/rulesets/: develop.json  gh-pages.json
.github/scripts/: backmerge-conflict-issue.js
.github/workflows/: backmerge.yml  cleanup.yml  coverage.yml  dashboard.yml  docs.yml  issues-labels.yml  labels.yml  pr-labels.yml  pypi-publish.yml  pypi-test.yml  quality.yml  release-notes.yml  release-pr.yml  security.yml  test-trigger.yml  test.yml  tutorial-tests-trigger.yml  tutorial-tests.yml
0.1.0/: 404.html  index.html  sitemap.xml
0.1.0/api-reference/: index.html
0.1.0/installation-and-setup/: index.html
0.1.0/introduction/: index.html
0.1.0/search/: search_index.json
0.1.0/tutorials/: index.html
0.1.0/tutorials/tutorial/: index.html  tutorial.ipynb
0.1.0/user-guide/: index.html
0.1.1/: 404.html  index.html  sitemap.xml
0.1.1/api-reference/: index.html
0.1.1/installation-and-setup/: index.html
0.1.1/introduction/: index.html
0.1.1/search/: search_index.json
0.1.1/tutorials/: index.html
0.1.1/tutorials/tutorial/: index.html  tutorial.ipynb
0.1.1/user-guide/: index.html
0.2.0/: 404.html  index.html  sitemap.xml
0.2.0.post1/: 404.html  index.html  sitemap.xml
0.2.0.post1/api-reference/: index.html
0.2.0.post1/api-reference/environment/: index.html
0.2.0.post1/assets/stylesheets/: extra.css
0.2.0.post1/installation-and-setup/: index.html
0.2.0.post1/introduction/: index.html
0.2.0.post1/search/: search_index.json
0.2.0.post1/tutorials/: index.html
0.2.0.post1/tutorials/tutorial/: index.html  tutorial.ipynb
0.2.0.post1/user-guide/: index.html
0.2.0/api-reference/: index.html
0.2.0/api-reference/environment/: index.html
0.2.0/installation-and-setup/: index.html
0.2.0/introduction/: index.html
0.2.0/search/: search_index.json
0.2.0/tutorials/: index.html
0.2.0/tutorials/tutorial/: index.html  tutorial.ipynb
0.2.0/user-guide/: index.html
0.2.1/: 404.html  index.html  sitemap.xml
0.2.1/api-reference/: index.html
0.2.1/api-reference/environment/: index.html
0.2.1/installation-and-setup/: index.html
0.2.1/introduction/: index.html
0.2.1/search/: search_index.json
0.2.1/tutorials/: index.html
0.2.1/tutorials/tutorial/: index.html  tutorial.ipynb
0.2.1/user-guide/: index.html
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/api-reference/: index.html
dev/api-reference/environment/: index.html
dev/installation-and-setup/: index.html
dev/introduction/: index.html
dev/search/: search_index.json
dev/tutorials/: index.html
dev/tutorials/tutorial/: index.html  tutorial.ipynb
dev/user-guide/: index.html
docs/: mkdocs.yml
docs/docs/: index.md
docs/docs/api-reference/: environment.md  index.md
docs/docs/installation-and-setup/: index.md
docs/docs/introduction/: index.md
docs/docs/tutorials/: index.md  tutorial.ipynb  tutorial.py
docs/docs/user-guide/: index.md
docs/includes/: abbreviations.md
docs/overrides/: main.html
latest/: 404.html  index.html
latest/api-reference/: index.html
latest/api-reference/environment/: index.html
latest/installation-and-setup/: index.html
latest/introduction/: index.html
latest/tutorials/: index.html
latest/tutorials/tutorial/: index.html
latest/user-guide/: index.html
src/easyutilities/: __init__.py  environment.py
tests/integration/scipp-analysis/: test_dummy.py
tests/unit/easyutilities/: test_dummy.py  test_environment.py
tools/: test_scripts.py  update_docs_assets.py  update_github_labels.py  update_spdx.py
