###############################
# Configuration for the project
###############################

[project]
name = 'easyutilities'
dynamic = ['version'] # Use versioningit to manage the version
description = 'Reusable utility classes and functions shared across EasyScience modules'
authors = [{ name = 'EasyUtilities contributors' }]
readme = 'README.md'
license = { file = 'LICENSE' }
classifiers = [
  'Intended Audience :: Science/Research',
  'Topic :: Scientific/Engineering',
  'License :: OSI Approved :: BSD License',
  'Operating System :: OS Independent',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
]
requires-python = '>=3.11'
dependencies = [
  #'easyscience', # The base library of the EasyScience framework
  'pooch',       # Data downloader
  'darkdetect',  # Detecting dark mode (system-level)
  'pandas',      # Displaying tables in Jupyter notebooks
  'plotly',      # Interactive plots
  'py3Dmol',     # Visualisation of crystal structures
  'jupyterlab',  # Jupyter notebooks
  'pixi-kernel', # Pixi Jupyter kernel
]

[project.optional-dependencies]
dev = [
  'build',                           # Building the package
  'pre-commit',                      # Pre-commit hooks
  'jinja2',                          # Templating
  'nbmake',                          # Building notebooks
  'nbstripout',                      # Strip output from notebooks
  'nbqa',                            # Linting and formatting notebooks
  'pytest',                          # Testing
  'pytest-cov',                      # Test coverage
  'pytest-xdist',                    # Enable parallel testing
  'ruff',                            # Linting and formatting code
  'radon',                           # Code complexity and maintainability
  'validate-pyproject[all]',         # Validate pyproject.toml
  'versioningit',                    # Automatic versioning from git tags
  'jupytext',                        # Jupyter notebook text format support
  'jupyterquiz',                     # Quizzes in Jupyter notebooks
  'docformatter',                    # Code formatter for docstrings
  'interrogate',                     # Check for missing docstrings
  'copier',                          # Template management
  'mike',                            # MkDocs: Versioned documentation support
  'mkdocs',                          # Static site generator
  'mkdocs-material',                 # Documentation framework on top of MkDocs
  'mkdocs-autorefs',                 # MkDocs: Auto-references support
  'mkdocs-jupyter',                  # MkDocs: Jupyter notebook support
  'mkdocs-plugin-inline-svg',        # MkDocs: Inline SVG support
  'mkdocs-markdownextradata-plugin', # MkDocs: Markdown extra data support, such as global variables
  'mkdocstrings-python',             # MkDocs: Python docstring support
  'pyyaml',                          # YAML parser
]

[project.urls]
homepage = 'https://easyscience.github.io/utils'
documentation = 'https://easyscience.github.io/utils'
source = 'https://github.com/easyscience/utils'
tracker = 'https://github.com/easyscience/utils/issues'

############################
# Build system configuration
############################

# Build system 'hatch' -- Python project manager
# https://hatch.pypa.io/

# Versioning system 'versioningit' -- Versioning from git tags
# https://versioningit.readthedocs.io/

[build-system]
build-backend = 'hatchling.build'
requires = ['hatchling', 'versioningit']

#############################
# Configuration for hatchling
#############################

[tool.hatch.build.targets.wheel]
packages = ['src/easyutilities']

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = 'versioningit' # Use versioningit to manage the version

################################
# Configuration for versioningit
################################

# Versioningit generates versions from git tags, so we don't need to
# either specify them statically in pyproject.toml or save them in the
# source code. Do not use {distance} in the version format, as it
# forces a version bump for every commit, which triggers unnecessary
# pixi.lock update without any changes to the source code.

[tool.versioningit.format]
distance = '{base_version}+dev{distance}'            # example: 1.2.3.post4+dev3
dirty = '{base_version}+dirty{distance}'             # example: 0.5.8+dirty3
distance-dirty = '{base_version}+devdirty{distance}' # example: 0.5.8+devdirty3

# Configure how versioningit detects versions from Git
# - 'match' ensures it only considers tags starting with 'v'
# - 'default-tag' is used as a fallback when no matching tag is found
[tool.versioningit.vcs]
method = 'git'
match = ['v*']
default-tag = 'v999.0.0'

################################
# Configuration for docformatter
################################

# 'docformatter' -- Code formatter for docstrings
# https://docformatter.readthedocs.io/en/latest/

[tool.docformatter]
recursive = true
wrap-summaries = 72
wrap-descriptions = 72
close-quotes-on-newline = true

################################
# Configuration for interrogate
################################

# 'interrogate' -- Check for missing docstrings
# https://interrogate.readthedocs.io/en/latest/

[tool.interrogate]
fail-under = 0 # Minimum docstring coverage percentage to pass
verbose = 1
#exclude = ['src/**/__init__.py']

#######################################
# Configuration for coverage/pytest-cov
#######################################

[tool.coverage.run]
branch = true    # Measure branch coverage as well
source = ['src'] # Limit coverage to the source code directory

[tool.coverage.report]
show_missing = true  # Show missing lines
skip_covered = false # Skip files with 100% coverage in the report
fail_under = 0       # Minimum coverage percentage to pass

##########################
# Configuration for pytest
##########################

[tool.pytest.ini_options]
addopts = '--import-mode=importlib'
markers = ['fast: mark test as fast (should be run on every push)']
testpaths = ['tests']

########################
# Configuration for ruff
########################

# 'ruff' -- Python linter and code formatter
# https://docs.astral.sh/ruff/rules/

[tool.ruff]
exclude = ['tmp']
indent-width = 4
line-length = 99
preview = true    # Enable new rules that are not yet stable, like DOC

[tool.ruff.format]
docstring-code-format = true    # Whether to format code snippets in docstrings
docstring-code-line-length = 72 # Line length for code snippets in docstrings
indent-style = 'space'          # PEP 8 recommends using spaces over tabs
line-ending = 'lf'              # Line endings will be converted to \n
quote-style = 'single'          # But double quotes in docstrings (PEP 8, PEP 257)

# https://docs.astral.sh/ruff/rules/
[tool.ruff.lint]
select = [
  'E',   # General PEP 8 style errors
  'E9',  # Runtime errors (e.g., syntax errors, undefined names)
  'F',   # Pyflakes-specific checks (e.g., unused variables, imports)
  'F63', # Issues related to invalid escape sequences in strings
  'F7',  # Type-related errors (e.g., mismatched argument types, unsupported operations)
  'F82', # Import-related errors (e.g., unresolved imports, reimported modules)
  'I',   # Import sorting issues (e.g., unsorted imports)
  'S',   # Security-related issues (e.g., use of insecure functions or libraries)
  'W',   # General PEP 8 warnings (e.g., lines too long, trailing whitespace)
]

[tool.ruff.lint.per-file-ignores]
'tests/**/*.py' = ['S101'] # Allow assert statements in tests

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = 'all'

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.mccabe]
max-complexity = 10 # default is 10

[tool.ruff.lint.pycodestyle]
max-line-length = 99 # https://peps.python.org/pep-0008/#maximum-line-length
max-doc-length = 72  # https://peps.python.org/pep-0008/#maximum-line-length

[tool.ruff.lint.pydocstyle]
convention = 'google'
